--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,7 @@ section {
 
 .navbar__menu .menu__link {
     display: block;
-    padding: 1em;
+    padding: 10px;
     font-weight: bold;
     text-decoration: none;
     color: #000;
